--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jquery": "^3.2.1",
     "ng-chartist": "^1.1.1",
     "ng2-charts": "^1.6.0",
+    "ng2-completer": "^2.0.8",
     "ng2-dragula": "^1.5.0",
     "ng2-file-upload": "^1.2.1",
     "ng2-nouislider": "^1.7.0",
